// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifGrid debe mostrar el componente correctamente 1`] = `
<div
  className="nes-container with-title is-centered"
>
  <h3
    className="title"
  >
    Kobe
  </h3>
  <p
    className="animate__animated animate__flash nes-text"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</div>
`;

exports[`Pruebas en GifGrid debe mostrar items cuando se cargan imágenes con useFetchGifs 1`] = `
<div
  className="nes-container with-title is-centered"
>
  <h3
    className="title"
  >
    Kobe
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="145"
      key="145"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</div>
`;
